# openmrs-livekit

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo-script.md  hackathon-dossier.md  proposal-positioning.md  security-model.md  submission-form-fields.md  tool-dispatcher-guide.md
scripts/: new_personality.py
src/: __init__.py  agent.py  api.py  backend_client.py  clinical_facts.py  clinical_translation.py  config.py  config_validator.py  culture.py  custom_personality.py  data_channel.py  deidentification.py  events.py  health_check.py  knowledge_loader.py  local_stt.py  local_tts.py  logger.py  memory.py  metrics.py  moderation.py  openmrs_client.py  openmrs_payload.py  personality.py  personality_loader.py  prompt_budget.py  prompt_flavor.py  prompts.py  prompts_builder.py  providers.py  session.py  tracing.py  transcript.py  variety.py
src/knowledge/: TEMPLATE.md  TEMPLATE.py  TEMPLATE.yaml  andean.py  andean.yaml  kpop.py  kpop.yaml  mexican.py  mexican.yaml  neutral.yaml  roblox.py  roblox.yaml
src/personalities/: TEMPLATE.md  TEMPLATE.yaml  __init__.py  defaults.yaml  kpop.py  kpop.yaml  mexican.py  mexican.yaml  neutral.yaml  peruvian.py  peruvian.yaml  roblox.py  roblox.yaml
src/tools/: __init__.py  datetime_tool.py  dispatcher.py  fun_fact_tool.py  games.py  openmrs_tools.py  setup.py  weather_tool.py  web_search_tool.py
tests/: conftest.py  test_backend_client.py  test_clinical_facts.py  test_config.py  test_deidentification.py  test_inworld_integration.py  test_local_providers.py  test_moderation.py  test_openmrs_payload.py  test_openmrs_tools.py  test_personalities_endpoint.py  test_personality.py  test_providers_mistral.py  test_session.py  test_tool_dispatcher.py  test_tools.py  test_variety.py
