[project]
name = "openmrs-livekit"
version = "0.1.0"
description = "LiveKit agent foundation for compiling clinical encounters into reviewable OpenMRS drafts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NEBUAI"}
]
keywords = ["openmrs", "livekit", "voice-agent", "clinical-ai", "human-in-the-loop"]

dependencies = [
    # LiveKit core
    "livekit-agents",

    # Plugins
    "livekit-plugins-openai",
    "livekit-plugins-silero",
    "livekit-plugins-elevenlabs",
    "livekit-plugins-cartesia",
    "livekit-plugins-inworld",
    "livekit-plugins-deepgram",
    "livekit-plugins-turn-detector",
    "livekit-plugins-google",

    # Configuration
    "pydantic-settings",
    "python-dotenv",

    # YAML (knowledge & personality loaders)
    "PyYAML",

    # HTTP client
    "aiohttp",

    # Metrics (expone /metrics via wsgiref stdlib — sin FastAPI)
    "prometheus-client>=0.21",


]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-asyncio~=0.23",
    "pytest-cov~=6.0",
    "ruff~=0.5",
    "mypy~=1.10",
]

deepgram = [
    "livekit-plugins-deepgram~=1.1",
]

noise-cancellation = [
    "livekit-plugins-noise-cancellation~=0.2",
]

local = [
    "faster-whisper>=1.0",
]

all = [
    "openmrs-livekit[dev,deepgram,noise-cancellation,local]",
]

[project.scripts]
openmrs-livekit = "src.agent:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "src.local_stt",
    "src.local_tts",
    "src.providers",
]
disable_error_code = [
    "arg-type",
    "attr-defined",
    "call-arg",
    "no-redef",
    "override",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
